add creditor crud and small changes for migrations

--- a/resources/js/css/adress.module.css
+++ b/resources/js/css/adress.module.css
@@ -66,3 +66,16 @@
 .addressManually__main {
 
 }
+.addressManually__mergedInputs {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+.addressManually__smallInput {
+    width: 48%;
+}
+.addressManually__input {
+    width: 100%;
+    margin-top: 10px;
+}
