--- a/resources/js/css/cessions.module.css
+++ b/resources/js/css/cessions.module.css
@@ -19,5 +19,6 @@
 }
 .cessionsToolbar {
     display: flex;
-    justify-content: flex-end;
+    width: 100%;
+    justify-content: space-between;
 }
