--- a/resources/js/css/customModal.module.css
+++ b/resources/js/css/customModal.module.css
@@ -20,6 +20,7 @@
     z-index: 5;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     display: flex;
     background-color: rgba(87, 87, 87, 0.5);
     flex-grow: 1;
