--- a/resources/js/css/leftMenu.changer.module.css
+++ b/resources/js/css/leftMenu.changer.module.css
@@ -1,5 +1,6 @@
 .fullInput {
     margin-bottom: 10px;
+    width: 100%;
 }
 .smallInput {
     width: 45%;
@@ -16,4 +17,16 @@
     margin-bottom: 10px;
     margin-top: 15px;
     width: 100%;
+}
+.checkbox {
+    width: 100%;
+    margin-top: 10px;
+}
+.flexWrapper {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.smallContainer {
+    width: 48%;
 }
