change create court front

--- a/resources/js/css/contract.module.css
+++ b/resources/js/css/contract.module.css
@@ -261,6 +261,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 .blockHeader {
     font-family: 'Roboto_slab', serif;
