--- a/resources/js/css/contract.module.css
+++ b/resources/js/css/contract.module.css
@@ -90,7 +90,13 @@
     text-transform: uppercase;
 
 }
-.payments__toolbar {
+.list__toolbar {
+    display: flex;
+    width: 100%;
+    margin-bottom: 5px;
+    justify-content: space-between;
+}
+.actionsList__toolbar {
     display: flex;
     width: 100%;
     margin-bottom: 5px;
