added orders in the lists

--- a/resources/js/css/customChips.module.css
+++ b/resources/js/css/customChips.module.css
@@ -31,6 +31,7 @@
     border: none;
     background-color: darkviolet;
     border-radius: 50%;
+    z-index: 1;
 }
 .addInput {
     margin-bottom: 10px;
