--- a/resources/js/css/App.css
+++ b/resources/js/css/App.css
@@ -2,6 +2,13 @@ button {
   outline: 0;
   border: 0;
 }
+body {
+  margin: 0 !important;
+}
+h1,h2,h3,h4,h5 {
+  margin: 0;
+  padding: 0;
+}
 
 #root {
   display: flex;
@@ -39,7 +46,6 @@ html {
   padding: 20px 30px;
   border-radius: 15px;
   background-color: white;
-  padding-left: 30px;
   width:500px;
 }
 .details__close {
@@ -91,7 +97,6 @@ html {
 }
 .xmark {
   position: absolute;
-  right: 10px;
   right: -17px;
   bottom: -5px;
 }
@@ -113,6 +118,9 @@ html {
 }
 .marginTop_0 {
   margin-top: 0 !important;
+}
+.margin-top_10 {
+  margin-top: 10px;
 }
 .fullWidth {
   width: 100% !important;
@@ -165,7 +173,6 @@ html {
   padding: 20px 30px;
   border-radius: 15px;
   background-color: white;
-  padding-left: 30px;
   position: fixed;
   width: 400px;
   min-height: 200px;
@@ -209,7 +216,7 @@ html {
 }
 @keyframes slideOut {
   from {
-    right: 0px;
+    right: 0;
   }
   to {
     right: 80%;
@@ -218,11 +225,11 @@ html {
 @keyframes slideIn {
   from {
     left: 80%;
-    right: 0px;
+    right: 0;
   }
   to {
-    left: 0px;
-    right: 0px;
+    left: 0;
+    right: 0;
   }
 }
 .small-inputs-box {
