--- a/resources/js/css/App.css
+++ b/resources/js/css/App.css
@@ -13,9 +13,10 @@ h1,h2,h3,h4,h5 {
 #root {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 1200px;
   background-size: 100%;
   font-family: 'Roboto_slab', serif;
+  background-color: #faf0e6;
 }
 .header {
   font-family: 'Roboto_slab', serif;
@@ -24,6 +25,11 @@ h1,h2,h3,h4,h5 {
   margin-top: 10px;
   margin-bottom: 10px;
   text-align: center;
+  border: 2px solid #c08459; 
+  background: #c08457;
+  font-size: 18px; 
+  padding: 5px 20px;
+  border-radius: 10px;
 }
 
 .background {
@@ -34,6 +40,9 @@ h1,h2,h3,h4,h5 {
   /* background-color: rgb(187, 185, 185); */
   flex-grow: 1;
   width: 100%;
+    background-image: url(https://stopfake.kz/wp-content/uploads/2022/06/a479-5e397cef51eef.jpg);
+    background-size: no-repeat;
+    background-position: center;
 }
 html {
   background: rgb(187, 185, 185) no-repeat center center fixed;
@@ -45,7 +54,7 @@ html {
 .contentBox {
   padding: 20px 30px;
   border-radius: 15px;
-  background-color: white;
+  background-color: #faf0e6;
   width:500px;
 }
 .details__close {
@@ -63,7 +72,7 @@ html {
 .details {
   position: relative;
   background-color: #fff;
-  
+
 }
 .detailsHeader {
   display: flex;
@@ -179,7 +188,7 @@ html {
   top: 25%;
   left: 50%;
   margin-top: -100px;
-  margin-left: -250px; 
+  margin-left: -250px;
   text-align: center;
 }
 .header_small {
@@ -251,4 +260,13 @@ html {
   font-size: 19px;
   text-align: center;
   margin-bottom: 5px;
+}
+.footer-bottom {
+    height: 79px;
+    background:#c08457;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 26px;
+
 }
