--- a/resources/js/css/menu.module.css
+++ b/resources/js/css/menu.module.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 8px 0;
     height: 30px;
+    background-color:#c08457;
 }
 .element {
     list-style-type: none;
@@ -34,4 +35,4 @@
 }
 .link_active {
     border-color: black;
-} 
+}
