--- a/resources/js/css/contract.module.css
+++ b/resources/js/css/contract.module.css
@@ -289,3 +289,11 @@
     text-align: center;
     margin-bottom: 5px;
 }
+.addEnforcementProceeding{
+    width: 50% !important;
+}
+.buttonBlock{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
