--- a/resources/js/css/start.module.css
+++ b/resources/js/css/start.module.css
@@ -1,13 +1,12 @@
 .main {
     display: grid;
-    background-color: #c08457;
+    background-color: #ddd;;
     height: 100%;
     grid-template-columns: 50% 50%;
     grid-template-rows: 46% 46%;
     overflow: hidden;
     /* gap: 20px; */
     row-gap: 40px;
-    background-image: url(https://stopfake.kz/wp-content/uploads/2022/06/a479-5e397cef51eef.jpg);
 }
 .refference {
     text-decoration: none;
@@ -22,7 +21,7 @@
     height: 100%;
     border-radius: 15px;
     padding-bottom: 20px;
-    background-color:#faf0e6;
+    background-color: white;
 }
 .relativeContainer {
     position: relative;
