--- a/resources/js/css/leftMenu.module.css
+++ b/resources/js/css/leftMenu.module.css
@@ -3,7 +3,7 @@
     background-color: #e5ffa6;
 }
 .link {
-    font-family: 'Roboto_slab', serif;
+    font-family: 'Roboto-slab', serif;
     color: black;
     text-decoration: none;
     border-right: 4px solid transparent;
