--- a/resources/js/css/start.module.css
+++ b/resources/js/css/start.module.css
@@ -5,8 +5,6 @@
     grid-template-columns: 50% 50%;
     grid-template-rows: 46% 46%;
     overflow: hidden;
-    /* gap: 20px; */
-    row-gap: 40px;
 }
 .refference {
     text-decoration: none;
@@ -16,9 +14,9 @@
     margin-left: 15px;
 }
 .element {
-    box-shadow: 2px 2px 8px 0px rgb(34 60 80 / 20%);
+    box-shadow: 2px 2px 8px 0 rgb(34 60 80 / 20%);
+    min-height: 50%;
     margin: 10px 12px;
-    height: 100%;
     border-radius: 15px;
     padding-bottom: 20px;
     background-color: white;
@@ -62,11 +60,6 @@
     justify-content: space-between;
 }
 
-/*.tableContainer {*/
-/*    display: inline-block;*/
-/*    overflow-x: hidden;*/
-/*    overflow-y: auto;*/
-/*}*/
 
 .tablePaginationBlock {
     height: 63px;
