--- a/resources/js/css/list.module.css
+++ b/resources/js/css/list.module.css
@@ -99,3 +99,17 @@
 /* .status {
     flex: 1
 } */
+.list_treaties {
+    font-family: 'Roboto_slab', serif;
+    font-size: 24px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.line {
+    border-bottom: 1px solid #616060;
+   }
+ 
+
+
