--- a/resources/js/css/customStepper.module.css
+++ b/resources/js/css/customStepper.module.css
@@ -1,7 +1,7 @@
 .toolbarBox {
-    width: 46%;
+    width: 50%;
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
 }
 .toolbar__leftBox {
     width: 42%;
@@ -11,6 +11,7 @@
 .toolbar__button {
     width: 25%;
     padding: 3px 50px;
+    margin-left: 10px;
 }
 .toolbar {
     display: flex;
