--- a/resources/js/css/start.module.css
+++ b/resources/js/css/start.module.css
@@ -1,9 +1,7 @@
 .main {
-    display: grid;
+    display: flex;
     height: 100%;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 46% 46%;
-    overflow: hidden;
+    width: 100%;
 }
 .refference {
     text-decoration: none;
@@ -13,9 +11,10 @@
     margin-left: 15px;
 }
 .element {
+    width: 50%;
     box-shadow: 2px 2px 8px 0 rgb(34 60 80 / 20%);
     min-height: 50%;
-    margin: 10px 12px;
+    margin: 10px;
     border-radius: 15px;
     padding-bottom: 20px;
     background-color: white;
